<package format="2">
  <name>dvp_validation</name>
  <version>0.0.1</version>
  <description>Validation node for dynamic velocity profile modification</description>
  <author email="icolwell@autonomoustuff.com">Ian Colwell</author>
  <maintainer email="icolwell@autonomoustuff.com">Ian Colwell</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dvp_waypoint_replanner</build_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>nodelet</depend>
  <depend>network_interface</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
