<package format="2">
  <name>dvp_waypoint_replanner</name>
  <version>0.0.1</version>
  <description>Dynamic Velocity Profile Waypoint Replanner</description>
  <author email="icolwell@autonomoustuff.com">Ian Colwell</author>
  <maintainer email="icolwell@autonomoustuff.com">Ian Colwell</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>autoware_msgs</depend>
  <depend>network_interface</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
